[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/restart.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -88.5
margin_right = 150.0
margin_bottom = 88.5
window_title = "Restart ?"

[node name="from_begin" type="Button" parent="WindowDialog"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -85.0
margin_top = 16.0
margin_right = 85.0
margin_bottom = 46.0
rect_min_size = Vector2( 170, 30 )
text = "Restart from beginning"

[node name="from_save_point" type="Button" parent="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -19.0
margin_right = 115.0
margin_bottom = 11.0
rect_min_size = Vector2( 230, 30 )
text = "Restart from the last save point"

[node name="cancel" type="Button" parent="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 33.0
margin_right = 40.0
margin_bottom = 63.0
rect_min_size = Vector2( 80, 30 )
text = "Cancel"

[connection signal="button_up" from="WindowDialog/from_begin" to="." method="_on_from_begin_button_up"]
[connection signal="button_up" from="WindowDialog/from_save_point" to="." method="_on_from_save_point_button_up"]
[connection signal="button_up" from="WindowDialog/cancel" to="." method="_on_cancel_button_up"]
